Almost finished porting the ZVector class. Added the math utilities header for calculating square roots and converting between angles.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="UtilMath.h" />
     <ClInclude Include="ZVector.h" />
     <ClInclude Include="ZDrawing.h" />
   </ItemGroup>
