Cleaned up some of the existing vector code. Implemented common functions like addition and indexing using operators to make the resulting code more readable in the future. Began implementing the Matrix class.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -28,6 +28,7 @@
     <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="UtilMath.h" />
+    <ClInclude Include="ZMatrix.h" />
     <ClInclude Include="ZVector.h" />
     <ClInclude Include="ZDrawing.h" />
   </ItemGroup>
