Fixed a couple bugs where globals were being defined more than once by refactoring some of those globals into a class. Made some more progress on the tokenizer.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="AssetLoader.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="UtilMath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetLoader.h" />
