--- a/ZSharp/ZSharp.vcxproj.filters
+++ b/ZSharp/ZSharp.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="AssetLoader.cpp">
       <Filter>Source Files\Asset</Filter>
     </ClCompile>
+    <ClCompile Include="UtilMath.cpp">
+      <Filter>Source Files\Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
