Progress checkin for the last few weeks. Made some more progress on storing the JSON objects from the parsed tokens.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Framebuffer.h" />
+    <ClInclude Include="JsonObject.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scanner.h" />
