--- a/ZSharp/ZSharp.vcxproj.filters
+++ b/ZSharp/ZSharp.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="Scanner.h">
       <Filter>Source Files\Asset</Filter>
     </ClInclude>
+    <ClInclude Include="JsonObject.h">
+      <Filter>Source Files\Asset</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="db_schema.json">
