Almost done adding support for JSON file format. Still need to populate the JSON objects from the stream of tokens returned by the scanner.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
+    <ClCompile Include="JsonObject.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scanner.cpp" />
     <ClCompile Include="UtilMath.cpp" />
