General cleanup and refactoring to make things simpler and easier to understand. Made some changes to the way colors are represented and made changes to the way certain pointers were being used with regards to the framebuffer in an effort to gain more speed by manipulating memory by the native machine word size (i.e. 8-bytes at a time on a 64-bit system, 4-bytes at a time on a 32-bit system, etc).

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scanner.h" />
     <ClInclude Include="UtilMath.h" />
+    <ClInclude Include="ZColor.h" />
     <ClInclude Include="ZMatrix.h" />
     <ClInclude Include="ZVector.h" />
     <ClInclude Include="ZDrawing.h" />
