--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="UtilMath.h" />
     <ClInclude Include="ZColor.h" />
+    <ClInclude Include="ZHeapArray.h" />
     <ClInclude Include="ZMatrix.h" />
     <ClInclude Include="ZVector.h" />
     <ClInclude Include="ZDrawing.h" />
