Fixed a couple of bugs, made the math library more flexible by allowing it to work on mismatching sized vectors/matricies in some cases, ported over the line drawing algorithm.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scanner.cpp" />
     <ClCompile Include="UtilMath.cpp" />
+    <ClCompile Include="ZDrawing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetLoader.h" />
