Finally fixed that stupid bug which was causing BSODs everytime the application ran for more than 5 seconds. In the end I cleaned up some of the GDI+ code and made it more efficient but also had to restructure my renderer a little bit.

--- a/SoftwareRenderer/SoftwareRenderer.vcxproj.filters
+++ b/SoftwareRenderer/SoftwareRenderer.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="GDIWrapper.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="WindowsHeadersWrapper.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
