Refactored the config struct into a class that will likely continue to evolve going forward. Moved headers into a separate section to better distinguish them from their cpp counterparts. Switched to using a std::vector for the underlying framebuffer data buffer in place of a dynamically allocated array to reduce potential bugs.

--- a/SoftwareRenderer/SoftwareRenderer.vcxproj.filters
+++ b/SoftwareRenderer/SoftwareRenderer.vcxproj.filters
@@ -24,10 +24,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GDIWrapper.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WindowsHeadersWrapper.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
