Created abstractions for vertex and index buffers which will replace passing in model data structures into the camera for clipping and transformations.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -31,6 +31,8 @@
   <ItemGroup>
     <ClInclude Include="AssetLoader.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="IndexBuffer.h" />
+    <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="ZConfig.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Framebuffer.h" />
