Moved some function implmentations from their .h file to the respective .cpp file to reduce compile times. Added some more typedefs to ZVector to make the code easier to read.

--- a/ZSharp/ZSharp.vcxproj
+++ b/ZSharp/ZSharp.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp" />
+    <ClCompile Include="IndexBuffer.cpp" />
+    <ClCompile Include="ZColor.cpp" />
     <ClCompile Include="ZConfig.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="JsonObject.cpp" />
